--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ yarn-error.log*
 Форма регистрации (при нажатии на ЛК).png
 Главная.jpg
 Каталог товаров - кофе (сортировка).jpg
+Карточка товара - кофе.png
