--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"server": "json-server --watch db.json -p 3001"
+		"server": "json-server --watch db.json -p 3001 -H 192.168.0.36"
 	},
 	"eslintConfig": {
 		"extends": [
