--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.20.0",
 		"react-scripts": "5.0.1",
+		"react-scroll": "^1.9.0",
+		"react-tabs": "^6.0.2",
 		"react-use": "^17.4.0",
 		"sass": "^1.69.5",
 		"swiper": "^11.0.4",
